💻 UI: small style fixes - z-index of calender next/prev buttons - hover/active interaction for filter reset button - fixed non-centered text on buttons

--- a/scss/blocks/date-overview.scss
+++ b/scss/blocks/date-overview.scss
@@ -140,6 +140,8 @@ button {
 		grid-column: span 1;
 		background-color: #f9fafb;
 		cursor: pointer;
+		position: relative;
+		z-index: 10;
 
 		&:hover {
 			background-color: #e5e7eb;
